--- a/1-pages/contacto.html
+++ b/1-pages/contacto.html
@@ -59,11 +59,17 @@
 
             <div class="form__background">
                 <form action="">
-                    <input type="text">
-                    <input type="mail">
-                    <input type="number">
-                    <input type="textarea">
-                    <input type="submit">
+                    <label for="fname">Nombre.</label>
+                    <input type="text" id="fname" name="firstname" placeholder="Ingrese su nombre...">
+                    <label for="lname">Apellido.</label>
+                    <input type="text" id="lname" name="lastname" placeholder="Ingrese su apellido...">
+                    <label for="mail">Mail.</label>
+                    <input type="mail" id="mail" name="mail" placeholder="Ingrese su direccion de email...">
+                    <label for="tnumber">Numero de Telefono.</label>
+                    <input type="number" id="tnumber" name="tnumber" placeholder="Ingrese su numero de telefono...">
+                    <label for="messaje">Consulta.</label>
+                    <input type="textarea" placeholder="Ingrese su consulta...">
+                    <input class="buttonBox buttonBox--gray" id="form__submitbtn" type="submit">
                 </form>
             </div>
         </div>
